--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,9 +14,12 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: your-dockerhub-username/frontend:latest
+          image: pes1ug21cs706/frontend:latest  # ✅ Update username
           ports:
             - containerPort: 80
+          env:
+            - name: REACT_APP_API_URL
+              value: "http://backend-service:5000"  # ✅ Ensure frontend connects to backend
 ---
 apiVersion: v1
 kind: Service
@@ -29,4 +32,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer
+  type: LoadBalancer  # ✅ This exposes the frontend externally
